fix/about page spacing

--- a/app/(routes)/about/page.module.css
+++ b/app/(routes)/about/page.module.css
@@ -2,3 +2,12 @@
   display: flex;
   justify-content: center;
 }
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 200px;
+}
